--- a/docs/5.login.md
+++ b/docs/5.login.md
@@ -4,9 +4,13 @@
 1. 先於瀏覽器(支援Chrome, Firefox 以及 IE 10 )以上輸入網址(https://infominer.io/)，點選【登入】按鈕。
 輸入帳號和密碼後，點選【登入】進入首頁。
 ```
-![login1](/site/img/login1.png)
 
-![login2](/site/img/login2.png)
+<center class='img'>
+<img src="../site/img/login1.png">
+<img src="../site/img/login2.png">
+</center>
+
+
 ```
 2.登入後，首頁右邊的畫面會顯示一圓圈，表示帳號的前二個英文字母，用來辨別目前登入的使用者帳號。
 ```
